# zygote

./: CMakeLists.txt  Dockerfile  README.md  start-sdk.sh
cmake/: utils.cmake
zygote/include/: zygote.h
zygote/include/syscall/: nr.h
zygote/lib/: CMakeLists.txt
zygote/lib/CLI11/: CMakeLists.txt
zygote/lib/libseccomp/: CMakeLists.txt
zygote/lib/spdlog/: CMakeLists.txt
zygote/lib/yaml-cpp/: CMakeLists.txt
zygote/res/: dynamically-linked-default.yaml
zygote/src/: CMakeLists.txt
zygote/src/bpf/: CMakeLists.txt
zygote/src/bpf/bpf/: Builder.cpp  Builder.h  Filter.cpp  Filter.h
zygote/src/conf/: CMakeLists.txt
zygote/src/conf/conf/: Config.h  ConfigYaml.cpp  ConfigYaml.h
zygote/src/main/: CMakeLists.txt  main.cpp  main_example_man7org.c  main_simple.c  main_tcp_socket.c
zygote/src/proc/: CMakeLists.txt
zygote/src/proc/proc/: Executor.cpp  Executor.h
zygote/src/zyg/: CMakeLists.txt  Zygote.cpp  Zygote.h
